Some dto changes and fixed some other problems