@@ -13,8 +13,8 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtGra
 import org.springframework.stereotype.Component;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -50,21 +50,29 @@ public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationTo
 
     private Collection<? extends GrantedAuthority> extractResourceRoles(Jwt jwt) {
         Map<String, Object> resourceAccess;
-        Map<String, Object> resource;
-        Collection<String> resourceRoles;
         if (jwt.getClaim("resource_access") == null) {
-            return Set.of();
+            return Collections.emptySet();
         }
         resourceAccess = jwt.getClaim("resource_access");
 
-        if (resourceAccess.get(resourceId) == null) {
-            return Set.of();
+        if (!resourceAccess.containsKey(resourceId)) {
+            return Collections.emptySet();
         }
-        resource = (Map<String, Object>) resourceAccess.get(resourceId);
 
-        resourceRoles = (Collection<String>) resource.get("roles");
-        return resourceRoles
-                .stream()
+        Object resourceObj = resourceAccess.get(resourceId);
+        if (!(resourceObj instanceof Map)) {
+            return Collections.emptySet();
+        }
+        @SuppressWarnings("unchecked")
+        Map<String, Object> resource = (Map<String, Object>) resourceObj;
+
+        Object rolesObj = resource.get("roles");
+        if (!(rolesObj instanceof Collection)) {
+            return Collections.emptySet();
+        }
+        Collection<?> rolesCollection = (Collection<?>) rolesObj;
+        return rolesCollection.stream()
+                .filter(role -> role instanceof String)
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
                 .collect(Collectors.toSet());
     }
